[project]
name = "comfyui_lightgradient"
description = "Nodes:Image Gradient,Mask Gradient"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/huagetai/ComfyUI_LightGradient"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_LightGradient"
Icon = ""
